<resources>
    <string name="app_name">AndroidOracle</string>
    <string name="app_version">App Version: %1$s</string>
    <string name="menu">Main Menu</string>
    <string name="set_question">Ask a question</string>
    <string name="settings">Settings</string>
    <string name="gender">Choose Gender</string>
    <string name="quit">Quit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="done">Done</string>
    <string name="choose_date">Choose Date</string>
    <string name="try_again">Generate</string>
    <string name="cancel">Cancel</string>
    <string name="textAsk">Enter your question:</string>
    <string name="textAnswer">Answer on your question:</string>

    <string name="empty_fields_error">Some fields are
empty</string>
    <string name="error">Error! Please check your question, maybe it is empty...</string>
</resources>