<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/screenPadding">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/ScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/menu"
        android:textSize="@dimen/font_size"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"/>

    <Button
        android:id="@+id/setQuestionButton"
        style="@style/MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_question" />

    <Button
        android:id="@+id/settingButton"
        style="@style/MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <Button
        android:id="@+id/quitButton"
        style="@style/MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit" />

    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="end|bottom"
        tools:text="Version 1.0" />
</LinearLayout>
