<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/screenPadding">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/ScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/font_size"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"  />

    <TableLayout
        android:id="@+id/resultsTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/doneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

    <EditText
        android:id="@+id/firstNameEditText"
        style="@style/Input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toTopOf="@+id/lastNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="@dimen/inputWidth" />

    <EditText
        android:id="@+id/lastNameEditText"
        style="@style/Input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inputMargin"
        android:hint="@string/last_name"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameEditText"
        app:layout_constraintWidth_max="@dimen/inputWidth" />

    <TextView
        android:id="@+id/dateOfBirth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inputMargin"
        android:hint="@string/date_of_birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="@dimen/inputWidth"
        app:layout_constraintTop_toBottomOf="@id/lastNameEditText"
        />

    <Button
        android:id="@+id/chooseDate"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:text="@string/choose_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateOfBirth"
        app:layout_constraintWidth_max="@dimen/inputWidth" />

    <RadioGroup android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/inputMargin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateOfBirth"
        app:layout_constraintWidth_max="@dimen/inputWidth">

        <TextView
            android:id="@+id/genderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <RadioButton android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"/>

        <RadioButton android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>
    </TableLayout>

    <Button
        android:id="@+id/doneButton"
        style="@style/PrimaryButton"
        android:layout_marginTop="@dimen/inputMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottomButtonsSpace"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonsSpace" />

    <Space
        android:id="@+id/buttonsSpace"
        android:layout_width="@dimen/buttonMargin"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/doneButton"
        app:layout_constraintStart_toEndOf="@id/cancelButton" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/SecondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@id/doneButton"
        app:layout_constraintEnd_toStartOf="@id/buttonsSpace"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>